# AI-Email-Agent

./: .env.example  .gitignore  README.md  pixi.toml  pyproject.toml  pytest.ini  requirements.txt
data/: scenarios.json
outputs/: evaluation_results.csv  evaluation_results.json  final_report.md  generated_emails.json
src/: __init__.py  cli.py  config.py  evaluate.py  generator.py  llm_client.py  models.py  prompts.py  report.py
tests/: __init__.py  conftest.py  fakes.py  test_cli_and_report.py  test_config.py  test_evaluate.py  test_generator.py  test_llm_client.py  test_models_and_prompts.py
